src/objects/StudentAttributes__c.object
<CustomObject>
    <description>Custom object to manage student attributes via portal and sites, with update triggers to Contact/Account</description>
    <fields>
        <fullName>AboutMeStatement__c</fullName>
        <description>About Me Profile</description>
        <inlineHelpText>Tell your classmates and mentor about yourself.</inlineHelpText>
        <label>About Me Statement</label>
        <length>6000</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>AffiliateFullname__c</fullName>
        <formula>CASE( TEXT(Affiliation__c) , 
&quot;WGU&quot;, &quot;Western Governors University&quot;, 
&quot;WGU-IN&quot;, &quot;WGU Indiana&quot;, 
&quot;WGU-WA&quot;, &quot;WGU Washington&quot;, 
&quot;WGU-TX&quot;, &quot;WGU Texas&quot;, 
&quot;WGU-MO&quot;, &quot;WGU Missouri&quot;, 
&quot;WGU-TN&quot;, &quot;WGU Tennessee&quot;, 
&quot;&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Affiliate Fullname</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AffiliatePortalURL__c</fullName>
        <formula>CASE( TEXT(Affiliation__c) , 
&quot;WGU&quot;, &quot;my.wgu.edu&quot;, 
&quot;WGU-IN&quot;, &quot;myindiana.wgu.edu&quot;, 
&quot;WGU-WA&quot;, &quot;mywashington.wgu.edu&quot;, 
&quot;WGU-TX&quot;, &quot;mytexas.wgu.edu&quot;, 
&quot;WGU-MO&quot;, &quot;mymissouri.wgu.edu&quot;, 
&quot;WGU-TN&quot;, &quot;mytennessee.wgu.edu&quot;, 
&quot;&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Affiliate Portal URL</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Affiliate_URL__c</fullName>
        <formula>CASE( TEXT(Affiliation__c) , 
&quot;WGU&quot;, &quot;https://my.wgu.edu&quot;, 
&quot;WGU-IN&quot;, &quot;https://indiana.wgu.edu&quot;, 
&quot;WGU-WA&quot;, &quot;https://washington.wgu.edu&quot;, 
&quot;WGU-TX&quot;, &quot;https://texas.wgu.edu&quot;, 
&quot;WGU-MO&quot;, &quot;https://missouri.wgu.edu&quot;, 
&quot;WGU-TN&quot;, &quot;https://tennessee.wgu.edu&quot;, 
&quot;&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Affiliate URL</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Affiliation__c</fullName>
        <description>WGU affiliate the student belongs to</description>
        <inlineHelpText>Set the student&apos;s WGU affiliation.</inlineHelpText>
        <label>University Affiliation</label>
        <picklist>
            <picklistValues>
                <fullName>WGU</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>WGU-IN</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>WGU-TX</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>WGU-WA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>WGU-MO</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>WGU-TN</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>CitizenshipStatus__c</fullName>
        <description>Self disclosed information from the application form</description>
        <label>Citizenship Status</label>
        <picklist>
            <picklistValues>
                <fullName>Non-Citizen</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>U.S. Citizen</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Non-Resident Alien</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>CommunityType__c</fullName>
        <description>Community type gathered from the Application form</description>
        <label>Community Type</label>
        <picklist>
            <picklistValues>
                <fullName>Rural</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Suburban</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Urban</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>EthnicBackground__c</fullName>
        <description>Ethnic background collected from the application.</description>
        <label>Ethnic Background</label>
        <picklist>
            <picklistValues>
                <fullName>American Indian / Alaska Native</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Asian</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Black / African American</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Native Hawaiian / Other Pacific Islander</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>White</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Nonresident Alien</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Hispanic</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Race and Ethnicity Unknown</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Black or African American</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Non-Hispanic</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>ExcludeFromEloqua__c</fullName>
        <formula>IF(StudentContact__r.ExcludeFromEloqua__c, &apos;True&apos;, &apos;False&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>ExcludeFromEloqua</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FacebookProfile__c</fullName>
        <label>Facebook Profile</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>IsTestData__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Field to indicate if the record is a test record</description>
        <label>Is Test Data</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LinkedInProfile__c</fullName>
        <label>LinkedIn Profile</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>MaidenName__c</fullName>
        <label>Maiden Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MaritalStatus__c</fullName>
        <description>Self disclosed from the application form</description>
        <label>Marital Status</label>
        <picklist>
            <picklistValues>
                <fullName>Single</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Married</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Separated</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Divorced</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Widowed</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>MilitaryStatus__c</fullName>
        <description>self disclosed from the application form</description>
        <label>Military Status</label>
        <picklist>
            <picklistValues>
                <fullName>Air Force Active Duty</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Army Active Duty</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Chapter 1606 MGIBill Reserve</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Chapter 1607</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Chapter 30 MGIBill Active Duty</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Chapter 31 Voc Rehab</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Chapter 32 VEAP Vietnam Era</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Chapter 33 Post 9/11</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Chapter 35 Veterans Dependents</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Coast Guard Active Duty</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DOD/TA Active Duty</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DOD/TA Active Duty - Top Up</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Decline to Answer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>In Active</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Marines Active Duty</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Navy Active Duty</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Never in Military</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No Relationship</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other Veteran</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Reserve</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Veteran Complete Withdrawal</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Veteran No Benefits</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>NEW_Id__c</fullName>
        <description>A temporary holding field for the new SF ID of this record (person account conversion).</description>
        <label>NEW_Id</label>
        <length>18</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Nickname__c</fullName>
        <label>Nickname</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OLD_Id__c</fullName>
        <description>A temporary holding field for the SF ID of this record, to be used for data migration from a person account org to a non-person account org. Declared as External Id for Upsert operations via the SOAP, REST, or BULK APIs.</description>
        <externalId>true</externalId>
        <label>OLD_Id</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ParentsAttendedACollegeOrUniversity__c</fullName>
        <description>Self-disclosed information from the Application form</description>
        <label>Parents Attended a College or University</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Unknown</fullName>
                <default>true</default>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>ParentsGraduated__c</fullName>
        <label>Parents Graduated</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>PersonalInterests__c</fullName>
        <description>Collection of personal interests, comma-delimited</description>
        <inlineHelpText>Enter your personal interests, separated by commas</inlineHelpText>
        <label>Personal Interests</label>
        <length>10000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>PersonalMissionStatement__c</fullName>
        <description>Student&apos;s personal mission statement</description>
        <inlineHelpText>What is your personal mission statement?</inlineHelpText>
        <label>Personal Mission Statement</label>
        <length>6000</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>PreviousNames__c</fullName>
        <label>Previous Names</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>StudentAccount__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Student Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Students Attributes</relationshipLabel>
        <relationshipName>StudentsAttributes</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>StudentContact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The related contact record for this student&apos;s attributes</description>
        <label>Student Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Students Attributes</relationshipLabel>
        <relationshipName>Students_Attributes</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>StudentDegreePlan__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Students degree plan(s)</description>
        <inlineHelpText>Select your degree program.</inlineHelpText>
        <label>Student Degree Plan</label>
        <referenceTo>StudentDegreePlans__c</referenceTo>
        <relationshipLabel>Students Attributes</relationshipLabel>
        <relationshipName>StudentsAttributes</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>StudentStatus__c</fullName>
        <label>Student Status</label>
        <picklist>
            <picklistValues>
                <fullName>Applied</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Enrolled</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Alumni</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>TwitterProfile__c</fullName>
        <label>Twitter Profile</label>
        <type>Url</type>
    </fields>
    <label>Student Attributes</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Student Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Students Attributes</pluralLabel>
    <recordTypes>
        <fullName>GraduateStudent</fullName>
        <active>true</active>
        <label>Graduate Student</label>
    </recordTypes>
    <recordTypes>
        <fullName>UndergraduateStudent</fullName>
        <active>true</active>
        <label>Undergraduate Student</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>